--- a/CSharpBible/Games/Packages.props
+++ b/CSharpBible/Games/Packages.props
@@ -1,45 +1,46 @@
 <Project>
-  <!-- https://learn.microsoft.com/en-us/nuget/consume-packages/central-package-management -->
-  <PropertyGroup>
-    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-  </PropertyGroup>
-  <ItemGroup>
-    <!-- Avalonia packages -->
-    <!-- Important: keep version in sync! -->
+	<!-- https://learn.microsoft.com/en-us/nuget/consume-packages/central-package-management -->
+	<PropertyGroup>
+		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+	</PropertyGroup>
+	<ItemGroup>
+		<!-- Avalonia packages -->
+		<!-- Important: keep version in sync! -->
 
-    <PackageVersion Include="Avalonia" Version="11.3.9" />
-    <PackageVersion Include="Avalonia.Headless" Version="11.3.9" />
-    <PackageVersion Include="Avalonia.Themes.Fluent" Version="11.3.9" />
-    <PackageVersion Include="Avalonia.Fonts.Inter" Version="11.3.9" />
-    <PackageVersion Include="Avalonia.Diagnostics" Version="11.3.9" />
-    <PackageVersion Include="Avalonia.Desktop" Version="11.3.9" />
-    <PackageVersion Include="Avalonia.iOS" Version="11.3.8" />
-    <PackageVersion Include="Avalonia.Browser" Version="11.3.9" />
-    <PackageVersion Include="Avalonia.Android" Version="11.3.9" />
-    <PackageVersion Include="Avalonia.Svg" Version="11.2.0.2" />
-    <PackageVersion Include="Svg.Controls.Skia.Avalonia" Version="11.3.6.2" />
-    <PackageVersion Include="Avalonia.Svg" Version="11.2.0.2" />
-    <PackageVersion Include="Avalonia.Svg.Skia" Version="11.3.0" />
-    <PackageVersion Include="Avalonia.Labs.Controls.ColorPicker" Version="11.2.2" />
-    <PackageVersion Include="Avalonia.Controls.ColorPicker" Version="11.3.9" />
-    <PackageVersion Include="Avalonia.ReactiveUI" Version="11.3.9" />
+		<PackageVersion Include="Avalonia" Version="11.3.9" />
+		<PackageVersion Include="Avalonia.Headless" Version="11.3.9" />
+		<PackageVersion Include="Avalonia.Themes.Fluent" Version="11.3.9" />
+		<PackageVersion Include="Avalonia.Fonts.Inter" Version="11.3.9" />
+		<PackageVersion Include="Avalonia.Diagnostics" Version="11.3.9" />
+		<PackageVersion Include="Avalonia.Desktop" Version="11.3.9" />
+		<PackageVersion Include="Avalonia.iOS" Version="11.3.8" />
+		<PackageVersion Include="Avalonia.Browser" Version="11.3.9" />
+		<PackageVersion Include="Avalonia.Android" Version="11.3.9" />
+		<PackageVersion Include="Svg.Controls.Skia.Avalonia" Version="11.3.6.2" />
+		<PackageVersion Include="Avalonia.Svg" Version="11.2.0.2" />
+		<PackageVersion Include="Avalonia.Svg.Skia" Version="11.3.0" />
+		<PackageVersion Include="Avalonia.Labs.Controls.ColorPicker" Version="11.2.2" />
+		<PackageVersion Include="Avalonia.Controls.ColorPicker" Version="11.3.9" />
+		<PackageVersion Include="Avalonia.ReactiveUI" Version="11.3.9" />
 
-    <PackageVersion Include="FontPickerAvalonia" Version="0.10.18.1" />
-    <PackageVersion Include="MessageBox.Avalonia" Version="3.3.0" />
-    <PackageVersion Include="MsBox.Avalonia" Version="3.0.0-rc2" />
+		<PackageVersion Include="FontPickerAvalonia" Version="0.10.18.1" />
+		<PackageVersion Include="MessageBox.Avalonia" Version="3.3.0" />
+		<PackageVersion Include="MsBox.Avalonia" Version="3.0.0-rc2" />
 
-    <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-    <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
-    <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.1"/>
-    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.1"/>
-    <PackageVersion Include="System.Drawing.Common" Version="10.0.0" />
-    <PackageVersion Include="System.Configuration.ConfigurationManager" Version="10.0.0" />
+		<PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+		<PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
+		<PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.1"/>
+		<PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.1"/>
+		<PackageVersion Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135"/>
+		<PackageVersion Include="System.Drawing.Common" Version="10.0.0" />
+		<PackageVersion Include="System.ValueTuple" Version="4.6.1"  />
+		<PackageVersion Include="System.Configuration.ConfigurationManager" Version="10.0.0" />
 
-    <PackageVersion Include="Xamarin.AndroidX.Core.SplashScreen" Version="1.0.1.14" />
+		<PackageVersion Include="Xamarin.AndroidX.Core.SplashScreen" Version="1.0.1.14" />
 
-    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
-    <PackageVersion Include="NSubstitute" Version="5.3.0" />
-    <PackageVersion Include="MSTest" Version="4.0.2" />
-    <PackageVersion Include="coverlet.collector" Version="6.0.4" />
-  </ItemGroup>
+		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
+		<PackageVersion Include="NSubstitute" Version="5.3.0" />
+		<PackageVersion Include="MSTest" Version="4.0.2" />
+		<PackageVersion Include="coverlet.collector" Version="6.0.4" />
+	</ItemGroup>
 </Project>
