--- a/CSharpBible/Games/Sokoban_BaseTests/Sokoban_BaseTests.csproj
+++ b/CSharpBible/Games/Sokoban_BaseTests/Sokoban_BaseTests.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <ProjectReference Condition="'$(TargetFramework.StartsWith(net4))'" Include="..\..\Libraries\BaseLibTests\BaseLibTests.csproj" />
     <ProjectReference Condition="'!$(TargetFramework.StartsWith(net4))'" Include="..\..\Libraries\BaseLibTests\BaseLibTests.csproj" />
+    <ProjectReference Include="..\Sokoban_Base\Sokoban_Base.csproj" />
   </ItemGroup>
 
 </Project>
