--- a/CSharpBible/Games/Tetris_BaseTests/Tetris_BaseTests.csproj
+++ b/CSharpBible/Games/Tetris_BaseTests/Tetris_BaseTests.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\ConsoleApps\TestConsole\TestConsole_net.csproj" />
+    <ProjectReference Include="..\Tetris_Base\Tetris_Base.csproj" />
   </ItemGroup>
 
 </Project>
