--- a/CSharpBible/Games/Treppen.Base/Treppen.Base.csproj
+++ b/CSharpBible/Games/Treppen.Base/Treppen.Base.csproj
@@ -17,12 +17,8 @@
     <TargetFrameworks>$(TargetFrameworks);net10.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions">
-      <Version>10.0.1</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
-      <Version>10.0.1</Version>
-    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions"/>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Libraries\MathLibrary\MathLibrary.csproj" />
