--- a/CSharpBible/Games/VTileEditTests/VTileEditTests.csproj
+++ b/CSharpBible/Games/VTileEditTests/VTileEditTests.csproj
@@ -18,7 +18,7 @@
 	<PropertyGroup />
 	<ItemGroup>
 	  <Compile Include="..\Snake_Console\View\TileDef.cs" Link="Models\Snake_TileDef.cs" />
-	  <Compile Include="..\Sokoban_Base\Model\FieldDef.cs" Link="Models\SB_FieldDef.cs" />
+	  <Compile Include="..\Sokoban_Base\Models\FieldDef.cs" Link="Models\SB_FieldDef.cs" />
 	  <Compile Include="..\Sokoban_Base\ViewModels\TileDef.cs" Link="Models\SB_Tiles.cs" />
 	  <Compile Include="..\Sokoban_Base\View\VisualsDef.cs" Link="Models\SB_TileDef.cs" />
 	  <Compile Include="..\Werner_Flaschbier\Model\FieldDef.cs" Link="Models\FB_FieldDef.cs" />
