--- a/CSharpBible/Graphics/Graphics_net.props
+++ b/CSharpBible/Graphics/Graphics_net.props
@@ -9,6 +9,8 @@
     <ImplicitUsings>disable</ImplicitUsings>
     <Company>JC-Soft</Company>
     <Authors>Joe Care</Authors>
-    <Copyright>Copyright © JC-Soft 2023</Copyright>
+    <Copyright>Copyright © JC-Soft 2026</Copyright>
+    <SuppressTfmSupportBuildErrors>true</SuppressTfmSupportBuildErrors>
+    <SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
   </PropertyGroup>
 </Project>
