--- a/TestStatements/PluginBase/PluginBase.csproj
+++ b/TestStatements/PluginBase/PluginBase.csproj
@@ -3,12 +3,18 @@
 		<Import Project="..\Solution_net.props" />
 	</ImportGroup>
 	<PropertyGroup>
-		<TargetFrameworks>net481;net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
-		<Nullable>enable</Nullable>
+    <TargetFrameworks>net462;net472;net48;net481;net6.0;net7.0;net8.0</TargetFrameworks>
+    <Nullable>enable</Nullable>
 	</PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
-	<PropertyGroup Condition="Exists('..\sgKey.snk')">
+  <PropertyGroup Condition="$([MSBuild]::VersionGreaterThanOrEquals('$(NETCoreSdkVersion)', '9.0.100'))">
+    <TargetFrameworks>$(TargetFrameworks);net9.0</TargetFrameworks>
+  </PropertyGroup>
+  <PropertyGroup Condition="$([MSBuild]::VersionGreaterThanOrEquals('$(NETCoreSdkVersion)', '10.0.100'))">
+    <TargetFrameworks>$(TargetFrameworks);net10.0</TargetFrameworks>
+  </PropertyGroup>
+  <PropertyGroup Condition="Exists('..\sgKey.snk')">
 		<SignAssembly>True</SignAssembly>
 		<AssemblyOriginatorKeyFile>..\snKey.snk</AssemblyOriginatorKeyFile>
 	</PropertyGroup>
