--- a/CSharpBible/Games/SharpHack.Combat/SharpHack.Combat.csproj
+++ b/CSharpBible/Games/SharpHack.Combat/SharpHack.Combat.csproj
@@ -1,12 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project>
+  <Import Project="..\Games_net.props" />
+  <PropertyGroup>
+    <OutputType>Library</OutputType>
+    <TargetFrameworks>net462;net472;net48;net481;net6.0;net7.0;net8.0</TargetFrameworks>
+  </PropertyGroup>
+  <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
+  <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
 
-	<PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+  <PropertyGroup Condition="$([MSBuild]::VersionGreaterThanOrEquals('$(NETCoreSdkVersion)', '9.0.100'))">
+    <TargetFrameworks>$(TargetFrameworks);net9.0</TargetFrameworks>
+  </PropertyGroup>
+  <PropertyGroup Condition="$([MSBuild]::VersionGreaterThanOrEquals('$(NETCoreSdkVersion)', '10.0.100'))">
+    <TargetFrameworks>$(TargetFrameworks);net10.0</TargetFrameworks>
   </PropertyGroup>
 
-	<ItemGroup>
+  <ItemGroup>
 	  <Compile Remove="obj\**" />
 	  <EmbeddedResource Remove="obj\**" />
 	  <None Remove="obj\**" />
