--- a/.github/workflows/CSharpBible.yml
+++ b/.github/workflows/CSharpBible.yml
@@ -23,6 +23,17 @@ jobs:
         with:
           dotnet-version: "8.0.x"
 
+      - name: Remove private projects
+        run: 
+           dotnet sln CSharpBible.sln remove "/home/runner/work/CSharp/CSharp/CSharpBible/Mobile/MauiApp1/MauiApp1.csproj"
+           dotnet sln CSharpBible.sln remove "/home/runner/work/CSharp/CSharp/CSharpBible/Simulation/AGVFktTests/AGVFktTests.csproj"
+           dotnet sln CSharpBible.sln remove "/home/runner/work/CSharp/CSharp/CSharpBible/Simulation/AGVFkt/AGVFkt.csproj"
+           dotnet sln CSharpBible.sln remove "/home/runner/work/CSharp/CSharp/CSharpBible/DB/ADO_Test/ADO_Test.csproj" 
+           dotnet sln CSharpBible.sln remove "/home/runner/work/CSharp/CSharp/CSharpBible/Libraries/CSFreeVision_/CSFreeVision.csproj"
+           dotnet sln CSharpBible.sln remove "/home/runner/work/CSharp/CSharp/CSharpBible/Mobile/DXMauiApp1/DXMauiApp1.csproj"
+           dotnet sln CSharpBible.sln remove "/home/runner/work/CSharp/CSharp/CSharpBible/Web/MyComponent/Client/MyComponent.Client.csproj"
+           dotnet sln CSharpBible.sln remove "/home/runner/work/CSharp/CSharp/CSharpBible/Web/MyComponent/Server/MyComponent.Server.csproj"
+
       - name: Restore
         run: dotnet restore CSharpBible.sln
 
